objects/voice_connector__VCCTIHttpRequestData__mdt.object
<CustomObject>
    <fields>
        <fullName>voice_connector__VCCTIDevName__c</fullName>
        <label>VCCTIDevName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCHttpBody__c</fullName>
        <label>VCHttpBody</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCHttpCallId__c</fullName>
        <label>VCHttpCallId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCHttpEndpoint__c</fullName>
        <label>VCHttpEndpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCHttpFilters__c</fullName>
        <label>VCHttpFilters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCHttpHeaders__c</fullName>
        <label>VCHttpHeaders</label>
        <length>62768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCHttpMethod__c</fullName>
        <label>VCHttpMethod</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>VCCTIHttpRequestData</label>
    <pluralLabel>VCCTIHttpRequestData</pluralLabel>
</CustomObject>